--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pm2-reload": "./node_modules/.bin/pm2 reload canary",
     "pm2-start": "NODE_ENV=production ./node_modules/.bin/pm2 start build/server.js --name canary --instances 0",
     "pm2-stop": "./node_modules/.bin/pm2 stop canary",
+    "release": "./bin/release.sh",
     "scripts-build": "mkdir -p build/scripts && node config/scripts-build.js",
     "start": "./bin/watch.sh",
     "stylus-build": "mkdir -p build/_assets && ./node_modules/.bin/stylus assets/stylesheets/app.* --out build/_assets --compress --sourcemap --use ./config/stylus-production.js",
@@ -32,8 +33,11 @@
   },
   "dependencies": {
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "morgan": "^1.6.1",
-    "pm2": "^0.14.7"
+    "pm2": "^0.14.7",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel": "^5.8.21",
@@ -41,16 +45,13 @@
     "babel-loader": "^5.3.2",
     "chai": "^3.2.0",
     "ejs": "^2.3.3",
-    "jade": "^1.11.0",
     "jsdom": ">= 0.1.23 < 4.0.0",
     "mincer": "^1.3.0",
     "mocha": "^2.2.5",
     "mocha-jsdom": "^1.0.0",
     "nodemon": "^1.4.1",
     "object-assign": "^3.0.0",
-    "react": "^0.13.3",
     "react-hot-loader": "^1.2.8",
-    "react-router": "^0.13.3",
     "stylus": "^0.52.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
