--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "babel-build": "./node_modules/.bin/babel app --out-dir build --source-maps true",
     "babel-build-test": "./node_modules/.bin/babel app --out-dir watch --source-maps inline && ./node_modules/.bin/babel test --out-dir watch/test --source-maps inline",
-    "babel-watch": "./node_modules/.bin/babel app --out-dir watch --watch --source-maps true",
+    "babel-watch": "./node_modules/.bin/babel app --out-dir watch --watch --source-maps true --presets es2015,react",
     "build": "./bin/build.sh",
     "clean": "rm -rf build",
     "mincer-css-build": "./node_modules/.bin/mincer --include build/_assets --output build/public/assets *.css",
@@ -35,26 +35,27 @@
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
-    "pm2": "^0.14.7",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "pm2": "^2.2.3",
+    "react": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-core": "^5.8.22",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.5.2",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "*",
+    "babel-loader": "*",
     "chai": "^3.2.0",
     "ejs": "^2.3.3",
-    "jsdom": ">= 0.1.23 < 4.0.0",
     "mincer": "^1.3.0",
-    "mocha": "^2.2.5",
+    "mocha": "^3.2.0",
     "mocha-jsdom": "^1.0.0",
     "nodemon": "^1.4.1",
-    "object-assign": "^3.0.0",
+    "object-assign": "^4.1.0",
     "react-hot-loader": "^1.2.8",
-    "stylus": "^0.52.0",
+    "stylus": "^0.54.5",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
-    "webpack-manifest-plugin": "^0.4.0"
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
