--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-loader": "*",
     "chai": "^3.2.0",
     "ejs": "^2.3.3",
+    "enzyme": "*",
     "jsdom": "*",
     "mincer": "^1.3.0",
     "mocha": "^3.2.0",
