Enable source maps

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "scripts": {
     "babel-build": "./node_modules/.bin/babel app --out-dir build --source-maps true --presets es2015,react",
     "babel-build-test": "./node_modules/.bin/babel app --out-dir watch --source-maps inline --presets es2015,react && ./node_modules/.bin/babel test --out-dir watch/test --source-maps inline --presets es2015,react",
-    "babel-watch": "./node_modules/.bin/babel app --out-dir watch --watch --source-maps true --presets es2015,react",
+    "babel-watch": "./node_modules/.bin/babel app --out-dir watch --watch --source-maps inline --presets es2015,react",
     "build": "./bin/build.sh",
     "clean": "rm -rf build",
     "mincer-css-build": "./node_modules/.bin/mincer --include build/_assets --output build/public/assets *.css",
     "mincer-media-build": "./node_modules/.bin/mincer --include assets/images --output build/public/assets *.jpg *.png",
-    "mocha-run": "./node_modules/.bin/mocha watch/test/test-*.js --require watch/test/shared.js",
+    "mocha-run": "./node_modules/.bin/mocha watch/test/test-*.js",
     "pm2-reload": "./node_modules/.bin/pm2 reload canary",
     "pm2-start": "NODE_ENV=production ./node_modules/.bin/pm2 start build/server.js --name canary --instances 0",
     "pm2-stop": "./node_modules/.bin/pm2 stop canary",
@@ -56,6 +56,7 @@
     "object-assign": "^4.1.0",
     "react-dom": "*",
     "react-hot-loader": "^1.2.8",
+    "source-map-support": "*",
     "stylus": "*",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1",
